styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Roboto, sans-serif;
    width: 100vw;
    /* display: flex; */
    /* flex-direction: column; */
}

.header {
    background-color: #1F2937;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 22px;
    font-size: 24px;
    font-weight: 700;
    color: #F9FAF8;
}

ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    list-style-position: inside;
    display: flex;
    gap: 32px;
    font-size: 18px;
    font-weight: 400;
    color: #E5E7EB;
}

.container {
    margin: 0;
    padding: 64px 32px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.hero-container {
    background-color: #1F2937;
}

.hero-container h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin-bottom: 12px;
}

.hero-container p {
    font-size: 18px;
    color: #E5E7EB;
    margin-bottom: 12px;
}

.hero-text {
    width: 30%;
}

.button {
    background-color: #3882F6;
    color: white;
    border-radius: 8px;
    font-weight: bold;
    text-align: center;
    width: 120px;
    padding: 12px 28px;
}

.information {
    flex-direction: column;
}

.information > p {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

.illustrations {
    padding: 64px;
    display: flex;
    gap: 32px;
}

.illustration {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    text-align: center;
    max-width: min-content;
    font-size: 18px;
}

.illustration img {
    border: 6px solid #3882F6;
    border-radius: 22px;
    margin-bottom: 6px;
}

.quote-container {
    background-color: #E5E7EB;
    padding: 64px 364px;
}

.quote {
    display: flex;
    flex-wrap: wrap;
    justify-content: end;
}

.quote-text {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
}

.quote-att {
    font-weight: bold;
    font-size: 24px;
    color: #1F2937;
}

.action-banner {
    background-color: #3882F6;
    border-radius: 8px;
    padding: 42px 100px;
    gap: 44px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.action-banner .call {
    font-weight: bold;
    font-size: 22px;
    color: #F9FAF8;
}

.sign-up-call {
    color: #E5E7EB;
}

.call-btn {
    border: 3px solid #F9FAF8;
}

.footer {
    background-color: #1F2937;
    text-align: center;
    color: #E5E7EB;
    padding: 32px 0;
}

